# microservice-api-testing

./: .env.example  .gitignore  CLAUDE.md   Makefile  README.md  pyproject.toml
adapters/: exceptions.py
tests/smoke/: test_exceptions.py
