[project]
name = "microservice-api-testing"
version = "0.1.0"
description = "Production-quality API testing framework for microservices"
authors = [
    {name = "VamsiKolla-QA",email = "saivamsikolla@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "schemathesis (>=4.16.1,<5.0.0)"
]
